--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <ul>在公司第一次</ul>
+    <ul>
+        <li>在公司第一次</li>
+        <li>在公司第二次</li>
+    </ul>
+
 </body>
 
 </html>
